--- a/colorgame.html
+++ b/colorgame.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="colorgame.css">
 
-    <title></title>
+
+    <!-- google-fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+
+
+    <title>The RGB Color Guessing Game</title>
   </head>
   <body>
 
@@ -27,19 +32,19 @@
     <div id="er">
       <button id="new">New Colors</button>
       <span id="mc" tabindex=0></span>
-      <button>Easy</button>
-      <button class="selected">Hard</button>
+      <button class="onhover">Easy</button>
+      <button class="selected onhover" >Hard</button>
     </div>
     <!--<li id="mc"></li>-->
             
 
     <div class="container" id="we">
-      <div class="qw"></div>
-      <div class="qw"></div>
-      <div class="qw"></div>
-      <div class="qw"></div>
-      <div class="qw"></div>
-      <div class="qw"></div>
+      <div class="qw onhover"></div>
+      <div class="qw onhover"></div>
+      <div class="qw onhover"></div>
+      <div class="qw onhover"></div>
+      <div class="qw onhover"></div>
+      <div class="qw onhover"></div>
     </div>
 
 
